[package]
name = "busybody"
version = "0.3.12"
edition = "2021"
license = "MIT"
description = "Service Container and Dependency injector crate"
repository = "https://github.com/shiftrightonce/busybody"
rust-version = "1.70"
keywords = ["webdev", "web", "service-container", "dependency-injection"]
categories = ["asynchronous", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
async-trait = "0.1"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
ulid = "1.1"


[dev-dependencies]
tokio = { version = "1", features = ["full"] }
actix-web = { version = "4" }
rand = { version = "0.8" }
uuid = { version = "1", features = ["v4"] }
