[package]
name = "busybody"
version = "1.0.6"
edition = "2024"
license = "MIT"
description = "Service Container and Dependency injector crate"
repository = "https://github.com/shiftrightonce/busybody"
keywords = ["webdev", "web", "service-container", "dependency-injection"]
categories = ["asynchronous", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
async-trait = "0.1"
tokio = { version = "1", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "sync",
] }
ulid = "1"


[dev-dependencies]
tokio = { version = "1", features = ["full"] }
actix-web = { version = "4" }
rand = { version = "0.9" }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4" }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
axum = "0.8"
