[package]
name = "busybody"
version = "1.0.12"
edition = "2024"
license = "MIT"
description = "Service Container and Dependency injector crate"
repository = "https://github.com/shiftrightonce/busybody"
keywords = ["webdev", "web", "service-container", "dependency-injection"]
categories = ["asynchronous", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.31"
async-trait = "0.1.89"
tokio = { version = "1.48.0", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "sync",
] }
ulid = "1"


[dev-dependencies]
tokio = { version = "1.48.0", features = ["full"] }
actix-web = { version = "4.12.1" }
rand = { version = "0.9.2" }
uuid = { version = "1.19.0", features = ["v4"] }
chrono = { version = "0.4.42" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
reqwest = { version = "0.12.28", features = ["json"] }
axum = "0.8.8"
