[package]
name = "hn_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9"
busybody = { path = "../../" }
chrono = "0.4"
rand = "0.9"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
