[package]
name = "hn_axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
hn_api = { path = "../hn_api" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
# tower = { version = "0.4", features = ["util"] }
busybody = { path = "../../" }
